--- a/css/text-page.css
+++ b/css/text-page.css
@@ -612,6 +612,12 @@
     padding-left:45px;
    }
 }
+@media(max-width:1100px){
+    .section-top-menu-blc{
+        width: auto;
+        margin: 60px 20px;
+    }
+}
 @media(max-width:1000px){
     .section-del-pay{
         display: block;
@@ -660,14 +666,14 @@
     .section-form-title-under{
         margin: 0 30px;
     }
-    /* .section-top-img{
+    .section-top-img{
         min-height: 240px;
     }
     .section-top-img>img{
         width: 100%;
-        height: 100%;
-        object-fit: contain;
-    } */
+        min-height: 240px;
+        object-fit: cover;
+    }
 
     .country-select-wrapp{
         display: block;
@@ -811,5 +817,5 @@
     .wrapp-btn-about-cat{
         padding-top: 0;
     }
-  
+
 }
