--- a/css/style.css
+++ b/css/style.css
@@ -1471,6 +1471,11 @@ transition: 0.5s;
     
 }
 
+.product-couple-container{
+    max-width:996px;
+    width:100%;
+}
+
 
 @media(min-width:768px){
     .stock-block-product:hover{
@@ -1496,6 +1501,24 @@ transition: 0.5s;
         opacity: 1;
     }
     .stock-block-slider .stock-block-product.slick-current+div+div+div{
+        opacity: 1;
+    }
+    .product-couple-slider .stock-block-product{
+        opacity: 0;
+    }
+    .product-couple-slider .stock-block-product.slick-active{
+        opacity: 1;
+    }
+    .product-couple-slider .stock-block-product.slick-current{
+        opacity: 1;
+    }
+    .product-couple-slider .stock-block-product.slick-current+div{
+        opacity: 1;
+    }
+    .product-couple-slider .stock-block-product.slick-current+div+div{
+        opacity: 1;
+    }
+    .product-couple-slider.stock-block-product.slick-current+div+div+div{
         opacity: 1;
     }
 }
