--- a/css/text-page.css
+++ b/css/text-page.css
@@ -2412,7 +2412,7 @@ line-height: 154.7%;
 .pay-blc-back-ad{
     background-color: #FFFFFF;
 }
-.container{
+.container-ad-pad{
     padding: 0;
 }
 }
