--- a/css/catalog.css
+++ b/css/catalog.css
@@ -230,6 +230,12 @@ margin-top:28px;
     color: #000000;
     text-align: center;
 }
+.catalog-top-view input::-webkit-outer-spin-button,
+.catalog-top-view input::-webkit-inner-spin-button {
+    /* display: none; <- Crashes Chrome on hover */
+    -webkit-appearance: none;
+    margin: 0; /* <-- Apparently some margin are still there even though it's hidden */
+}
 .catalog-top-sort{
     height: 36px;
     padding: 8px 11px;
