--- a/css/product.css
+++ b/css/product.css
@@ -296,6 +296,7 @@
 }
 
 .product-advantages{
+    padding-top:35px;
     padding-left:92px;
     display: flex;
 }
@@ -463,6 +464,22 @@ cursor: pointer;
 }
 .product-mob-tabs{
     display: none;
+}
+
+.product-tabs-tab-desc-text-info{
+    display: flex;
+    padding-top:30px;
+    padding-bottom:30px;
+    flex-wrap: wrap;
+    align-items: center;
+}
+.product-tabs-tab-desc-text-info .quick-content-info-slide{
+    cursor: pointer;
+    margin-right:30px;
+}
+.product-tabs-tab-desc-text-info .quick-content-info-slide svg{
+    width:45px;
+    height:45px;
 }
 @media(max-width:1024px){
     .product-top{
